# discokitty

./: README.md  discokitty.cabal
source/: Dimension.hs  Discokitty.hs  Finite.hs  HasCups.hs  Lambek.hs  Main.hs  Multiwords.hs  Rel.hs  Universe.hs  Vectorspaces.hs  Words.hs
source/Discokitty/: Diagrams.hs  Dimension.hs  Finite.hs  HasCups.hs  Lambek.hs  Multiwords.hs  Words.hs
source/Discokitty/Examples/: AliceAndBob.hs  Books.hs  ConvexSpaces.hs  LesJustes.hs  LesJustesMain.hs  LesJustesUniverse.hs  LesJustesVector.hs  LesJustesViterbi.hs  LesJustesViterbi2.hs
source/Discokitty/Models/: Convex.hs  Diagrams.hs  Rel.hs  Relations.hs  Searchable.hs  Vectorspaces.hs
source/Examples/: AliceAndBob.hs  LesJustesMain.hs  LesJustesUniverse.hs  LesJustesVector.hs  LesJustesViterbi.hs
source/Models/: Rel.hs  Vectorspaces.hs
