name:                discokitty
version:             0.1.0
synopsis:            DisCoCat implementation.
description:         An educational implementation of the DisCoCat framework.
homepage:            https://github.com/mroman42/discokitty
bug-reports:         https://github.com/mroman42/discokitty/issues
license:             GPL-3
license-file:        LICENSE
author:              Mario Román (mroman42)
maintainer:          mromang08+github@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2
                                          
source-repository head
  type:           git
  location:       git://github.com/mroman42/discokitty.git


                       
executable mikrokosmos
  hs-source-dirs:      ./source
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5,
                       containers >= 0.5.7.1
                       
                       
  other-modules:       Dimension
                       HasCups
                       Lambek
                       MainVec
                       MainVit
                       Multiwords
                       Rel
                       Universe
                       Vectorspaces
                       Words
                       
  default-language:    Haskell2010
  ghc-options:         -Wall
